# project_edoba

./: .gitignore  .gitignore_details.md  README.md  package-lock.json  package.json  product_design_doc_gymnast.md  product_roadmap.md  requirements_gymnast.txt
_how_to_install_things/: install_rust.md
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
